remove constructs in favor of lombok